Improve notification system after testing